function challenges ------------ done

--- a/css/style.scss
+++ b/css/style.scss
@@ -14,5 +14,9 @@ hr{
     width: 100%;
     ul{
         width:50% ;
+        a{
+            text-decoration: none;
+           
+        }
     }
 }
