bom & destructing data

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,24 +1,86 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-h3{
-    color:blue;
+h3 {
+  color: blue;
 }
-hr{
-    font-weight: bold;
+hr {
+  font-weight: bold;
 }
 
-.links{
-    width: 100%;
-    ul{
-        width:50% ;
-        a{
-            text-decoration: none;
-           
-        }
+.links {
+  width: 100%;
+  ul {
+    width: 50%;
+    a {
+      text-decoration: none;
     }
+  }
+}
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.colors {
+  width: 50%;
+  height: 300px;
+  background-color: rgb(157, 157, 157);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+  div {
+    width: 20%;
+    height: 75px;
+    border: 2px solid black;
+    opacity: 0.3;
+  }
+  .active {
+    opacity: 1;
+  }
+}
+.view {
+  width: 70%;
+  font-size: xx-large;
+  height: 300px;
+  text-align: center;
+  border: 2px solid black;
+}
+
+.task {
+  background-color: aquamarine;
+  display: flex;
+  width: 40%;
+  height: 70px;
+  align-items: center;
+  justify-content: space-around;
+}
+.taskdiv {
+  background-color: rgb(141, 144, 143);
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  div {
+    border: 1px solid black;
+    padding: 10px;
+    background-color: aliceblue;
+    width: 80%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    button {
+      background-color: red;
+      color: aliceblue;
+      padding: 10px;
+      border-radius: 5px;
+    }
+  }
 }
