--- a/css/style.scss
+++ b/css/style.scss
@@ -84,3 +84,10 @@ body {
     }
   }
 }
+.main{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
