--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ hr {
   font-weight: bold;
 }
 
+a {
+  text-decoration: none;
+  color: aliceblue;
+}
+
 .links {
   width: 100%;
 }
@@ -27,6 +32,8 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: rgb(40, 40, 202);
+  color: aliceblue;
 }
 
 .colors {
